# juxr

./: Cargo.toml  Dockerfile  README.md  coverage.sh  index.html  params.json
.github/workflows/: release.yaml  rust.yaml
src/: lib.rs  main.rs
src/reports/: case.rs  mod.rs  result.rs  suite.rs  transform.rs  xml_util.rs
src/streams/: import.rs  mod.rs  needle.rs  trim.rs
src/suite/: command.rs  mod.rs  plan.rs  test.rs
src/tap/: mod.rs
test/plan/: basic.yaml  full.yaml
test/report/: attachment-relocated.xml  attachment-windows.xml  attachment.xml  empty-renamed.xml  empty.xml  one-class-renamed.xml  one-test-renamed.xml  one.xml  output-redact-multiple.xml  output-redacted.xml  output.xml  property-redacted.xml  property.xml
test/tap/12/: common.txt  giveup.txt  missing.txt  trailing-output.txt  unknown.txt  unknown9.txt
test/tap/13/: common.txt  missing.txt  trailing-output.txt  unknown9.txt  yaml-no-end.txt
test/tap/invalid/: two-plans.txt
test/xml/: sample.xml
