[package]
name = "juxr"
description = "JUnit XML Reports Toolkit"
version = "0.1.8-pre"
authors = ["Stephen Connolly <stephen.alan.connolly@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://cloudbees-oss.github.io/juxr/"
repository = "https://github.com/cloudbees-oss/juxr"
readme = "README.md"
keywords = ["cli","junit","tap"]
categories = ["command-line-utilities"]

[package.metadata.release]
sign-commit = true
sign-tag = true
dev-version-ext = "pre"
tag-name = "{{version}}"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
base64 = "0.12.1"
clap = "2.33.1"
chrono = "0.4.11"
globwalk = "0.8.0"
log = "0.4"
pretty_env_logger = "0.4.0"
regex = "1.3.9"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["v4"] }
xml-rs = "0.8.3"
